2009-04-17  Suravee Suthikulpanit <suravee.suthikulpanit@amd.com>

	* events/x86-64/family10/events:
	* events/x86-64/family10/unit_masks: Add IBS support, patch 2 of 4


2009-04-17  Suravee Suthikulpanit <suravee.suthikulpanit@amd.com>

	* daemon/Makefile.am:
	* daemon/opd_extended.c:
	* daemon/opd_ibs.c: New File
	* daemon/opd_ibs.h: New File
	* daemon/opd_ibs_macro.h: New File
	* daemon/opd_ibs_trans.c: New File
	* daemon/opd_ibs_trans.h: New File
	* daemon/opd_interface.h:
	* daemon/opd_sfile.c:
	* daemon/opd_sfile.h:
	* daemon/opd_trans.c:
	* libdb/db_insert.c:
	* libdb/odb.h: Add IBS support, patch 1 of 4

2009-04-15  Maynard Johnson  <maynardj@us.ibm.com>

	* libpp/xml_utils.cpp: Fix binary count total in XML output
	  when using --separate=lib

2009-04-08  William Cohen  <wcohen@redhat.com>

	* configure.in: Add check for basename declaration

2009-04-01  Suravee Suthikulpanit <suravee.suthikulpanit@amd.com>

	* daemon/Makefile.am:
	* daemon/opd_events.c:
	* daemon/opd_extended.h: New File
	* daemon/opd_extended.c: New File
	* daemon/opd_printf.h:
	* daemon/opd_sfile.h:
	* daemon/opd_sfile.c:
	* daemon/opd_stats.c:
	* daemon/opd_trans.h:
	* daemon/opd_trans.c:
	* daemon/oprofiled.c:
	* libop/op_events.h:
	* libop/op_events.c:
	* libop/op_alloc_counter.c:
	* utils/ophelp.c: Add Extended Feature Interface

2009-03-17  Suraveee Suthikulpanit <suravee.suthikulpanit@amd.com>

	* events/Makefile.am
	* events/x86-64/family11h/events: New event file
	* events/x86-64/family11h/unit_masks: New Unitmask file
	* libop/op_cpu_type.c: Adding family11h
	* libop/op_cpu_type.h: Adding family11h
	* libop/op_events.c: Adding family11h
	* utils/ophelp.c: Adding family11h and update documents

2009-03-17  Maynard Johnson  <maynardj@us.ibm.com>

	* libop/op_allocate_counter.c: Make map_event_to_counter handle
	  a non-native cpu_type

2009-03-05  Robert Richter <robert.richter@amd.com>

	* libutil++/bfd_support.cpp: suppress 'unused parameter' warning
