@@ -1,5 +1,9 @@
 2009-04-17  Suravee Suthikulpanit <suravee.suthikulpanit@amd.com>
 
+	* pp/opannotate.cpp: Add IBS support, patch 3 of 4
+
+2009-04-17  Suravee Suthikulpanit <suravee.suthikulpanit@amd.com>
+
 	* events/x86-64/family10/events:
 	* events/x86-64/family10/unit_masks: Add IBS support, patch 2 of 4
 
